fixed the issue with font on mobile

--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,7 @@ body{
 }
 
 .companyLogo {
-    width: 180px;
+    width: clamp(140px, 15vw, 180px);
     flex:  0 0 auto;
     margin-right: 50px;
 }
@@ -201,6 +201,7 @@ body{
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     margin: 0 20px 0 20px ;
+    gap: 20px;
 }
 
 .whatWeDo, .goals {
@@ -211,23 +212,13 @@ body{
 
 
 .title{
-    font-size: clamp(1.7rem, 3vw, 2rem);
+    font-size: clamp(1.3rem, 4vw, 2.8rem);
+    font-weight: 800;
 }
 
-.whatWeDo > div, .goals > div{
-    position: relative;
-    font-size: 3rem;
-    font-weight: 800;
-    margin: 0;
-    right: 50px;
-}
-.whatWeDo ul, .goals ul {
-    padding: 0;
-    font-size: clamp(1.1rem, 2vw, 1.3rem);
-}
 
 .whatWeDo li, .goals li{
-    font-size: 1.5rem;
+    font-size: clamp(1.3rem, 2vw, 1.9rem);
     margin-top: 10px;
     font-family: 'circular-light';
     font-weight: 600;
@@ -249,7 +240,7 @@ body{
 }
 
 .placeholder:hover {
-    transform: scale(1.01);
+    transform: scale(1.05);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     transition: all 0.3s ease;
 }
@@ -356,7 +347,13 @@ body{
     Change Menu to hamburger:
 */
 
-@media only screen and (max-width:1050px) {
+
+/*
+Change logo and main org
+*/
+
+
+@media only screen and (max-width: 820px) {
     .header > nav {
         display: none;
     }
@@ -366,64 +363,26 @@ body{
     .menuBtn{
         display:flex;
     }
-}
-
-/*
-Change logo and main org
-*/
-
-@media only screen and (max-width:1050px) {
-    .companyLogo {
-        width: 150px;
-        margin-left: 10px;
-    }
     .main {
         display: flex;
         flex-flow: column nowrap;
         align-items: center;
     }
     .main div {
-        width: 85%;
+        width: 100%;
     }
     .placeholder {
-        width: 85%;
+        width: 87%;
     }
-    .title {
-        font-size: 2.5rem;
+    .title{
+        font-size: clamp(2rem, 6vw, 2.5rem);
     }
     
-    .whatWeDo ul, .goals ul {
-        font-size: 1.5rem;
+    .whatWeDo li, .goals li{
+        font-size: clamp(1.4rem, 4vw, 1.7rem);
     }
 }
 
 /*
     Change font organization for mobile view:
 */
-
-@media only screen and (max-width:1050px){
-
-    .whatWeDo, .goals{
-        max-width: 100vw;
-    }
-    .whatWeDo > div, .goals > div{
-        position: relative;
-        font-size: 2rem;
-        font-weight: 800;
-        margin: 0;
-        right: 50px;
-    }
-
-    .whatWeDo ul, .goals ul {
-        padding: 0;
-        font-size: clamp(1.1rem, 2vw, 1.3rem);
-    }
-    
-    .whatWeDo li, .goals li{
-        font-size: 1rem;
-        margin-top: 10px;
-        font-family: 'circular-light';
-        font-weight: 600;
-    }
-    
-}
